syntax = "proto3";

package platypus;

// Element types supported by platypus
message Element {
    string id = 1;
    
    oneof type {
        TextElement text = 2;
        ButtonElement button = 3;
        TextInputElement text_input = 4;
        SliderElement slider = 5;
        CheckboxElement checkbox = 6;
        SelectboxElement selectbox = 7;
        MultiSelectElement multiselect = 8;
        MarkdownElement markdown = 9;
        CodeElement code = 10;
        ImageElement image = 11;
        DataFrameElement dataframe = 12;
        JsonElement json = 13;
        ContainerElement container = 14;
        ColumnElement column = 15;
        RowElement row = 16;
        TabElement tab = 17;
        ExpanderElement expander = 18;
        ProgressElement progress = 19;
        SuccessElement success = 20;
        ErrorElement error = 21;
        WarningElement warning = 22;
        InfoElement info = 23;
        RadioElement radio = 24;
        DateInputElement date_input = 25;
        TimeInputElement time_input = 26;
        ColorPickerElement color_picker = 27;
        FileUploaderElement file_uploader = 28;
        CameraInputElement camera_input = 29;
        TabsElement tabs = 30;
        SidebarElement sidebar = 31;
        MetricElement metric = 32;
        AudioElement audio = 33;
        VideoElement video = 34;
        HeadingElement heading = 35;
        TextAreaElement text_area = 36;
        NumberInputElement number_input = 37;
        TableElement table = 38;
        DividerElement divider = 39;
        EmptyElement empty = 40;
        LineChartElement line_chart = 41;
        BarChartElement bar_chart = 42;
        AreaChartElement area_chart = 43;
        ScatterChartElement scatter_chart = 44;
        PieChartElement pie_chart = 45;
        PlotlyChartElement plotly_chart = 46;
        VegaLiteChartElement vega_lite_chart = 47;
        BokehChartElement bokeh_chart = 48;
    }
}

message TextElement {
    string value = 1;
}

message ButtonElement {
    string label = 1;
    string key = 2;
}

message TextInputElement {
    string label = 1;
    string value = 2;
    string key = 3;
}

message SliderElement {
    string label = 1;
    double value = 2;
    double min = 3;
    double max = 4;
    string key = 5;
}

message CheckboxElement {
    string label = 1;
    bool value = 2;
    string key = 3;
}

message SelectboxElement {
    string label = 1;
    repeated string options = 2;
    string value = 3;
    string key = 4;
}

message MultiSelectElement {
    string label = 1;
    repeated string options = 2;
    repeated string values = 3;
    string key = 4;
}

message MarkdownElement {
    string value = 1;
}

message CodeElement {
    string value = 1;
    string language = 2;
}

message ImageElement {
    string src = 1;
    string caption = 2;
    uint32 width = 3;
}

message DataFrameElement {
    string data = 1;  // JSON-encoded
}

message JsonElement {
    string data = 1;  // JSON-encoded
}

message ContainerElement {
    repeated string children = 1;
}

message ColumnElement {
    repeated string children = 1;
    float width = 2;
}

message RowElement {
    repeated string children = 1;
}

message TabElement {
    string label = 1;
    repeated string children = 2;
}

message ExpanderElement {
    string label = 1;
    bool expanded = 2;
    repeated string children = 3;
}

message ProgressElement {
    float value = 1;
}

message SuccessElement {
    string message = 1;
}

message ErrorElement {
    string message = 1;
}

message WarningElement {
    string message = 1;
}

message InfoElement {
    string message = 1;
}

message RadioElement {
    string label = 1;
    repeated string options = 2;
    string value = 3;
    string key = 4;
}

message DateInputElement {
    string label = 1;
    string value = 2;
    string key = 3;
}

message TimeInputElement {
    string label = 1;
    string value = 2;
    string key = 3;
}

message ColorPickerElement {
    string label = 1;
    string value = 2;
    string key = 3;
}

message FileUploaderElement {
    string label = 1;
    string key = 2;
}

message CameraInputElement {
    string label = 1;
    string key = 2;
}

message TabsElement {
    repeated TabItem tabs = 1;
}

message TabItem {
    string label = 1;
    repeated string children = 2;
}

message SidebarElement {
    repeated string children = 1;
}

message MetricElement {
    string label = 1;
    string value = 2;
    string delta = 3;
}

message AudioElement {
    string src = 1;
}

message VideoElement {
    string src = 1;
}

message HeadingElement {
    string value = 1;
    uint32 level = 2;
}

message TextAreaElement {
    string label = 1;
    string value = 2;
    string key = 3;
}

message NumberInputElement {
    string label = 1;
    double value = 2;
    string key = 3;
}

message TableElement {
    repeated string headers = 1;
    repeated TableRow rows = 2;
}

message TableRow {
    repeated string cells = 1;
}

message DividerElement {
}

message EmptyElement {
}

message LineChartElement {
    string data = 1;  // JSON-encoded chart data
    string title = 2;
}

message BarChartElement {
    string data = 1;  // JSON-encoded chart data
    string title = 2;
}

message AreaChartElement {
    string data = 1;  // JSON-encoded chart data
    string title = 2;
}

message ScatterChartElement {
    string data = 1;  // JSON-encoded chart data
    string title = 2;
}

message PieChartElement {
    string data = 1;  // JSON-encoded chart data
    string title = 2;
}

message PlotlyChartElement {
    string spec = 1;  // Plotly JSON specification
}

message VegaLiteChartElement {
    string spec = 1;  // Vega-Lite JSON specification
}

message BokehChartElement {
    string spec = 1;  // Bokeh JSON specification
}
